assets/css/style.css
/* Google Font imports */
@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:wght@400;500;700;800&display=swap');

/* Universal font family & size */
* {
    font-family: 'Hanken Grotesk', sans-serif;
    font-size: 16px;
}

main {
    height: 100vh;
}

article.container-fluid {
    max-width: 550px;
}

/* Text colors */
.text-white {
    color: hsl(0, 0%, 100%);
}

.text-transparent-gray {
    color: hsla(0, 0%, 89%, 0.7);
}

.text-pale-blue {
    color: hsl(221, 100%, 96%);
}

.text-light-lavender {
    color: hsl(241, 100%, 89%);
}

.text-dark-gray-blue {
    color: hsl(224, 30%, 27%);
}

.text-light-red {
    color: hsl(0, 100%, 67%);
}

.text-orange-yellow {
    color: hsl(39, 100%, 56%);
}

.text-green-teal {
    color: hsl(166, 100%, 37%);
}

.text-cobalt-blue {
    color: hsl(234, 85%, 45%);
}

/* Background colors & gradients */

.bg-main-gradient {
    background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
}

.bg-circle-gradient {
    background: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0))
}

.bg-button {
    background-color: hsl(224, 30%, 27%);
}

/* Component styles */
/* Component Score (top on mobile, left on desktop) */
.component-score {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

.component-score {
    min-height: 45vh;
    border-bottom-left-radius: 16px;
    border-bottom-right-radius: 16px;
    padding: 20px 24px;
}

.component-score h2,
.component-score p {
    margin: 0;
}

.result-heading {
    font-size: inherit;
}

.component-score h3 {
    font-size: 1.5rem;
    font-weight: 700;
}

.component-score p.text-transparent-gray {
    line-height: 1.2;
}

.component-score

/* Component Score - Circle */
.circle {
    height: 120px;
    width: 120px;
    border-radius: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.circle .score-result {
    font-size: 3rem;
    font-weight: 800;
}

.circle .score-total {
    font-size: 0.85rem;
}

/* Component Summary (bottom on mobile, right on desktop) */

.component-summary {
    height: 55vh;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    padding: 20px;
}
.component-summary h2 {
    font-size: 1rem;
    font-weight: 700;
}

/* Component Summary - Skill icon/text */
.skill-icon-and-text p {
    margin: 0;
    /* font-weight: 700; */
}

.skill-icon-and-text {
    display: flex;
    align-items: center;
    gap: 1rem;
}

/* Skill score */

.skill-score p,
.skill-score span {
    font-weight: 700;
}

.skill-score span {
    color: rgb(175, 175, 175);
}
/* Button */

button.bg-button {
    font-family: inherit;
    font-weight: 700;
    width: 100%;
    padding: 12px;
    border: none;
    border-radius: 24px;
}

@media screen and (min-width: 768px) {
    main {
        display: grid;
        place-items: center;
    }

    .component-score {
        border-top-left-radius: 16px;
        border-top-right-radius: 16px;
    }
}

